Fixed button-arrow not showing correctly.

--- a/src/pug/includes/btn/--arrow/btn--arrow.scss
+++ b/src/pug/includes/btn/--arrow/btn--arrow.scss
@@ -1,6 +1,6 @@
 .btn {
   // ----------- ARROW-BUTTON ------------
-  &--arrow {
+  &.btn--arrow {
     display: inline-flex;
     align-items: center;
     justify-content: center;
